@@ -1,5 +1,10 @@
 # vim: set noexpandtab:
 
+2012-10-02 Steve
+	* Adding new event cleaning cut flags and methods, so that we are 
+	  able to turn off all filtering in the SusyNtMaker and still be
+	  able to apply the cuts later
+
 2012-09-28 Steve
 	* Tagging SusyCommon-00-00-41
 
